frontend/src/dialog.css
.dialog-backdrop {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background: #888a;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}
.dialog {
    background: #fff; /*fallback*/
    background: var(--bg);
    padding: max(0.5em, 1vw);
    border-radius: 1em;
    position: relative;
    margin: 0 3vw;
    overflow: hidden;
    max-height: calc(100vh - 2em)
}
.dialog-icon {
    color: #fff;
    background-color: var(--color);
    position: absolute;
    top: 0;
    width: 1.8em;
    height: 1.7em;
    text-align: center;
    border-radius: .8em 0;
}
.dialog-title {
    margin-top: -.4em;
    font-size: 110%;
}
.dialog-icon ~ .dialog-title {
    text-align: center;
}
.dialog-closer {
    border-radius: 0 0.8em;
    right: 0;
    padding: 0;
    background-color: #c99;
}
.dialog-icon ~ .dialog-content {
    margin-top: 2em;
}
.dialog-type {
    left: 0;
    top: 0;
    overflow: hidden;
    line-height: 1.7em;
}
.dialog-content {
    overflow: auto;
    max-height: calc(100vh - 4em);
}
.dialog-content p {
    white-space: pre-wrap;
    margin: .5em 0;
}
.dialog-confirm .dialog-content button {
    margin-top: 1em;
}
.dialog-alert-info {
    --color: #282
}
.dialog-alert-warning {
    --color: #c91
}
.dialog-alert-error {
    --color: #822;
}

@media (max-width: 50em) {
    .dialog-closer {
        font-size: 120%
    }
    .dialog-icon ~ .dialog-content {
        margin-top: 2em;
    }
}

